add teh voice call response

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 TWILIO_ACCOUNT_SID=ertreettyyyuuu
 TWILIO_AUTH_TOKEN=XXXXXXXX
 OPENAI_API_KEY='your_openai_api_key'
+HR_MANAGER_TEL_NO='+25678499367'
